--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-bible-library",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "private": false,
   "dependencies": {
     "@headlessui/react": "^1.7.4",
@@ -78,5 +78,16 @@
   },
   "keywords": [],
   "author": "Thessa Kranendonk",
-  "license": "ISC"
+  "license": "ISC",
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thessakranendonk/component-bible.git"
+  },
+  "bugs": {
+    "url": "https://github.com/thessakranendonk/component-bible/issues"
+  },
+  "homepage": "https://github.com/thessakranendonk/component-bible#readme"
 }
