--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-bible-library",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": false,
   "dependencies": {
     "@headlessui/react": "^1.7.4",
@@ -55,7 +55,6 @@
   },
   "description": "TypeScript Tailwind Component Library",
   "main": "lib/index.js",
-  "types": "lib/index.d.ts",
   "files": [
     "lib/**/*"
   ],
@@ -89,5 +88,5 @@
   "bugs": {
     "url": "https://github.com/thessakranendonk/component-bible/issues"
   },
-  "homepage": "https://github.com/thessakranendonk/component-bible#readme"
+  "homepage": "https://github.com/thessakranendonk/component-bible"
 }
