--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-bible-library",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "private": false,
   "dependencies": {
     "@headlessui/react": "^1.7.4",
@@ -56,6 +56,7 @@
   "description": "TypeScript Tailwind Component Library",
   "main": "lib/index.js",
   "files": [
+    "lib",
     "lib/**/*"
   ],
   "devDependencies": {
