--- a/lib/package.json
+++ b/lib/package.json
@@ -1,14 +1,11 @@
 {
   "name": "component-bible-library",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "private": false,
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
-    "@patternfly/patternfly": "^4.219.2",
-    "@patternfly/react-core": "^4.250.1",
     "@patternfly/react-icons": "^4.92.10",
-    "@patternfly/react-table": "^4.111.33",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
@@ -36,36 +33,20 @@
     "postversion": "git push && git push --tags"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": ["react-app", "react-app/jest"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   },
   "description": "TypeScript Tailwind Component Library",
   "main": "./index.js",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^23.0.2",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-typescript": "^9.0.2",
     "@types/jest": "^27.5.2",
     "autoprefixer": "^10.4.13",
     "jest": "^29.3.1",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
-    "rollup": "^3.3.0",
-    "rollup-plugin-dts": "^5.0.0",
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.3",
     "tslint": "^6.1.3",
