--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "component-bible-library",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "private": false,
   "dependencies": {
     "@headlessui/react": "^1.7.4",
@@ -19,7 +19,17 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@types/jest": "^27.5.2",
+    "autoprefixer": "^10.4.13",
+    "jest": "^29.3.1",
+    "postcss": "^8.4.19",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.0.3",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,26 +43,26 @@
     "postversion": "git push && git push --tags"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "description": "TypeScript Tailwind Component Library",
   "main": "./index.js",
-  "devDependencies": {
-    "@types/jest": "^27.5.2",
-    "autoprefixer": "^10.4.13",
-    "jest": "^29.3.1",
-    "postcss": "^8.4.19",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.2.4",
-    "ts-jest": "^29.0.3",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.8.4"
-  },
+  "devDependencies": {},
   "keywords": [],
   "author": "Thessa Kranendonk",
   "license": "ISC",
