--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "@patternfly/react-icons": "^4.92.10",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/leaflet": "^1.9.0",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "clsx": "^1.2.1",
+    "leaflet": "^1.9.3",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
+    "leaflet.pm": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -59,6 +65,7 @@
   ],
   "devDependencies": {
     "@types/jest": "^27.5.2",
+    "@types/react-helmet": "^6.1.6",
     "autoprefixer": "^10.4.13",
     "jest": "^29.3.1",
     "postcss": "^8.4.19",
