--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "leaflet": "^1.9.3",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "leaflet.pm": "^2.2.0",
+    "postcss-import": "^15.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.0",
@@ -32,6 +33,7 @@
     "start": "react-scripts start",
     "test": "jest --config jestconfig.json",
     "build": "tsc",
+    "build:css": "tailwindcss --postcss -i ./src/index.css -o ./lib/src/index.css",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
