--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "techtessy",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "private": false,
   "dependencies": {
     "@headlessui/react": "^1.7.4",
@@ -8,32 +8,33 @@
     "@patternfly/react-icons": "^4.92.10",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/leaflet": "^1.9.0",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "clsx": "^1.2.1",
-    "leaflet": "^1.9.3",
-    "leaflet-defaulticon-compatibility": "^0.1.1",
-    "leaflet.pm": "^2.2.0",
-    "postcss-import": "^15.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@types/jest": "^27.5.2",
+    "autoprefixer": "^10.4.13",
+    "jest": "^29.3.1",
+    "postcss": "^8.4.19",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.0.3",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "test": "jest --config jestconfig.json",
     "build": "tsc",
-    "build:css": "tailwindcss --postcss -i ./src/index.css -o ./lib/src/index.css",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
@@ -60,24 +61,8 @@
     ]
   },
   "description": "TypeScript Tailwind Component Library",
-  "main": "lib/index.js",
-  "files": [
-    "lib",
-    "lib/**/*"
-  ],
-  "devDependencies": {
-    "@types/jest": "^27.5.2",
-    "@types/react-helmet": "^6.1.6",
-    "autoprefixer": "^10.4.13",
-    "jest": "^29.3.1",
-    "postcss": "^8.4.19",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.2.4",
-    "ts-jest": "^29.0.3",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.8.4"
-  },
+  "main": "./index.js",
+  "devDependencies": {},
   "keywords": [],
   "author": "Thessa Kranendonk",
   "license": "ISC",
